[tool.poetry]
name = "atrius-docs-mcp-server"
version = "0.1.0"
description = "MCP server for Atrius documentation search using Pinecone"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "atrius_docs_mcp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^0.2.0"
pinecone-client = "^5.3.1"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atrius-docs-mcp = "atrius_docs_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311'] 